--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -20,6 +20,8 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'account/login/login.scss';
 @import 'admin/admin.scss';
 @import 'main/main.scss';
+@import 'news/mainArticles/mainArticles.scss';
+@import 'news/singleArticle/singleArticle.scss';
 @import 'footer/footer.scss';
 @import 'modal/modal.scss';
 @import 'navbar/navbar.scss';
