--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -5,6 +5,7 @@
 
 * {
     font-family: font1;
+    font-size:18px;
 }
 
 .thing-form {
@@ -20,12 +21,13 @@
     font-size: 60px;
     line-height: 1;
     letter-spacing: -1px;
+    text-shadow: 2px 2px black;
 }
 
 .hero-unit {
     position: relative;
     padding: 30px 15px;
-    color: #F5F5F5;
+    color: white;
     text-align: center;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
     background: #4393B9;
@@ -37,4 +39,77 @@
 
 .main-logo {
   width: 150px;
+}
+
+#main-view {
+  border-left: 1px solid black;
+  padding: 0 15px;
+}
+
+.mythumbnail {
+    padding:0px;
+    height:380px;
+    margin-bottom: 0px;
+    border-radius: 0px;
+    display:block;
+    line-height: 1.42857;
+    background-color: white;
+    transition: all 0.2s ease-in-out;
+}
+
+.no-gutter {
+    padding: 0px;
+    border-radius: 0;
+}
+
+#articleList {
+    margin-left: -1px;
+    margin-right: -1px;
+}
+
+.caption {
+    background-color: #fff;
+      bottom: 0px;
+      left: 50%;
+      overflow: hidden;
+      padding: 25px;
+      position: absolute;
+      right: 0px;
+      top: 50%;
+      z-index: 4;
+}
+
+#askQuestion {
+  padding: 30px;
+}
+
+.carousel-control.left {
+  background-image: none;
+}
+
+.carousel-control.right {
+  background-image: none;
+}
+
+.carousel-indicators {
+  bottom:0;
+}
+
+.carousel-indicators li {
+  width: 70px;
+  height: 70px;
+  margin: 5px;
+  cursor: pointer;
+  border: 4px solid #CCC;
+  opacity: 0.4;
+  border-radius: 100px;
+  transition: all 0.7s;
+}
+
+.carousel-indicators .active {
+width: 150px;
+height: 150px;
+border-radius: 100px;
+border-color: #F5DC25;
+opacity: 1;
 }
