--- a/client/components/sidebar/sidebar.html
+++ b/client/components/sidebar/sidebar.html
@@ -1,6 +1,5 @@
-<!-- Sidebar -->
-<nav class="navbar navbar-inverse" id="sidebar-wrapper" role="navigation">
-    <ul class="nav sidebar-nav">
+<nav class="navbar" id="sidebar-wrapper" role="navigation">
+    <ul id="sidebar" class="nav sidebar-nav">
         <li class="sidebar-brand">
             <a href="#">
                Brand
