--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -13,12 +13,14 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
     background: #ccc;
     color: #000;
     padding: 0.2em 0;
+    font-family: font6;
 }
 
 // Component styles are injected through grunt
 // injector
 @import 'account/login/login.scss';
 @import 'admin/admin.scss';
+@import 'landing/landing.scss';
 @import 'main/main.scss';
 @import 'news/mainArticles/mainArticles.scss';
 @import 'news/singleArticle/singleArticle.scss';
