--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,23 +7,38 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">เพื่อนใจ Soul Friend</a>
+      <a ng-href="/" class="navbar-brand">เพื่อนใจ</a>
     </div>
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
+        <li>
+          <a href="/main" ng-hide="isLoggedIn()">หน้าหลัก</a>
+        </li>
         <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
             <a ng-href="{{item.link}}">{{item.title}}</a>
+        </li>
+        <li ng-controller="DropdownCtrl">
+            <span class="dropdown" dropdown on-toggle="toggled(open)">
+              <a href class="dropdown-toggle" dropdown-toggle>
+                ทําความรู้จักกับเรา
+              </a>
+              <ul class="dropdown-menu">
+                <li ng-repeat="choice in abouts">
+                  <a ng-href="{{choice.link}}">{{choice.title}}</a>
+                </li>
+              </ul>
+            </span>
         </li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
+        <li><a class="button" href="" ng-click="">ถามปัญหาใจ</a></li>
         <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/signup')}"><a href="/signup">สมัครเป็นเพื่อนใจ</a></li>
-        <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="/login">เข้าสู้ระบบ</a></li>
-        <li ng-show="isLoggedIn()"><a href="" ng-click="">write an article</a></li>
-        <li ng-show="isLoggedIn()"><p class="navbar-text">{{ displayName() }}</p> </li>
+        <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}" ng-click="closeCollapse()"><a href="/login">เข้าสู้ระบบ</a></li>
+        <li ng-show="isLoggedIn()"><a href="/profile"><p>{{ displayName() }}</p></a></li>
         <li ng-show="isLoggedIn()" ng-class="{active: isActive('/settings')}"><a href="/settings"><span class="glyphicon glyphicon-cog"></span></a></li>
-        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">ออกจากระบบ</a></li>
+        <li ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout(); closeCollapse();">ออกจากระบบ</a></li>
       </ul>
     </div>
   </div>
