--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -36,7 +36,7 @@
         <li><a class="button" href="/ask">ถามปัญหาใจ</a></li>
         <!-- <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/signup')}"><a href="/signup">สมัครเป็นเพื่อนใจ</a></li> -->
         <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}" ng-click="closeCollapse()"><a href="/login">เข้าสู้ระบบ</a></li>
-        <li ng-show="isLoggedIn()"><a href="/profile" style="padding-bottom:0;"><p>{{ displayName() }}</p></a></li>
+        <li ng-show="isLoggedIn()"><a ng-href="/users/{{userId}}" style="padding-bottom:0;"><p>{{user.username}}</p></a></li>
         <li ng-show="isLoggedIn()" ng-class="{active: isActive('/settings')}"><a href="/settings"><span class="glyphicon glyphicon-cog"></span></a></li>
         <li ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout(); closeCollapse();">ออกจากระบบ</a></li>
       </ul>
