--- a/client/app/account/users/user.scss
+++ b/client/app/account/users/user.scss
@@ -89,6 +89,7 @@ background-color: #F1F1F1;
 .picture_mob{
     position: absolute;
     width: 25%;
+    max-height: 180px;
     left: 37%;
     bottom: 102%;
 }
