--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -27,6 +27,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'news/mainArticles/mainArticles.scss';
 @import 'news/singleArticle/singleArticle.scss';
 @import 'question/question.scss';
+@import 'share/share.scss';
 @import 'footer/footer.scss';
 @import 'modal/modal.scss';
 @import 'navbar/navbar.scss';
