--- a/client/app/share/share.scss
+++ b/client/app/share/share.scss
@@ -21,3 +21,29 @@ tags-input .tags .input {
     font: inherit !important;
 }
 */
+
+.articleBody img {
+    -webkit-box-shadow: 1px 2px 3px 1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 2px 3px 1px rgba(0,0,0,0.75);
+    box-shadow: 1px 2px 3px 1px rgba(0,0,0,0.75);
+    margin:15px 0;
+}
+
+.articleBody p,.articleBody h1,.articleBody h2,.articleBody h3,.articleBody blockquote {
+    font-size:100%;
+}
+
+#articleTopPanel {
+    text-align: center;
+}
+
+#articleTopPanel p {
+    font-style: italic;
+}
+
+.fade {
+   opacity: 1;
+   transition: opacity .25s ease-in-out;
+   -moz-transition: opacity .25s ease-in-out;
+   -webkit-transition: opacity .25s ease-in-out;
+   }
