--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,4 +1,5 @@
-<div class="navbar navbar-default navbar-fixed-top" ng-controller="NavbarCtrl">
+<headroom tolerance="5" offset="400" classes='{"initial":"animated","pinned":"slideInDown","unpinned":"slideOutUp","top":"headroom--top","notTop":"headroom--not-top"}' class="navbar-fixed-top">
+<div class="navbar navbar-default" ng-controller="NavbarCtrl">
   <div class="container">
     <div class="navbar-header">
       <button class="navbar-toggle" type="button" ng-click="isCollapsed = !isCollapsed">
@@ -81,3 +82,4 @@
     </div>
   </div>
 </div>
+</headroom>
