--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -19,7 +19,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 // Component styles are injected through grunt
 // injector
 @import 'account/login/login.scss';
-@import 'account/users/user.scss';
+@import 'account/profile/profile.scss';
 @import 'admin/admin.scss';
 @import 'ask/ask.scss';
 @import 'landing/landing.scss';
