--- a/client/app/account/profile/profile.scss
+++ b/client/app/account/profile/profile.scss
@@ -9,9 +9,9 @@
     border-radius: 0px !important;
 }
 
-
-
-
+a.list-group-item:hover, a.list-group-item:focus {
+    background-color: aliceblue;
+}
 
 .bg_blur
 {
@@ -56,14 +56,16 @@
    
 }
 
+.list-group-item {
+    padding: 0px 15px;
+}
+
 
 @media (max-width: 992px) {
     .header{
         text-align : center;
         margin-left: 0;
     }
-    
-    
     
     .nav{
         margin-top : 30px;
