--- a/client/app/question/question.scss
+++ b/client/app/question/question.scss
@@ -25,7 +25,7 @@
     height:100%;
 }
 
-.answerSidePanel li a{
+.answerSidePanel li a{x
     margin: 0;
 }
 
@@ -40,8 +40,6 @@
 }
 
 .answersInQuestion {
-    box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.75);
-    /*border: 1px dotted #dddddd;*/
     margin: 0;
 }
 
