--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -21,13 +21,16 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'account/login/login.scss';
 @import 'account/profile/profile.scss';
 @import 'admin/admin.scss';
+@import 'article/mainArticles/mainArticles.scss';
+@import 'article/singleArticle/singleArticle.scss';
 @import 'ask/ask.scss';
 @import 'landing/landing.scss';
 @import 'main/main.scss';
-@import 'news/mainArticles/mainArticles.scss';
-@import 'news/singleArticle/singleArticle.scss';
 @import 'question/question.scss';
 @import 'share/share.scss';
+@import 'tag/tag/tag.scss';
+@import 'tag/tags/tags.scss';
+@import 'user/user.scss';
 @import 'footer/footer.scss';
 @import 'modal/modal.scss';
 @import 'navbar/navbar.scss';
