--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -83,6 +83,7 @@ mark {
 
 a:hover {
   text-decoration: none;
+  cursor: pointer;
 }
 
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{
@@ -400,6 +401,10 @@ opacity: 1;
 
 .blue {
   color:#428bca;
+}
+
+.white {
+  color:white;
 }
 
 .yellow {
