--- a/client/app/ask/ask.scss
+++ b/client/app/ask/ask.scss
@@ -20,3 +20,10 @@ tags-input .tags .input {
     margin: 3px !important;
     font: inherit !important;
 }
+
+.postfixQuestionButton {
+    background: linear-gradient(white, #fff9aa); 
+    font-size: 1.3em; 
+    width:100%; 
+    color:#428bca;
+}
