--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -214,8 +214,19 @@ a:hover {
       position: absolute;
       right: 0px;
       padding:5px;
-      top: 50%;
+      top: 40%;
       z-index: 4;
+}
+
+.triangle {
+  width: 0;
+  height: 0;
+  border: solid 5px;
+  border-color: #FFF9AA transparent transparent #428bca;
+  color: white;
+  display: inline-table;
+  padding: 5px;
+  text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
 }
 
 #askQuestion {
@@ -228,10 +239,6 @@ a:hover {
 
 .carousel-control.right {
   background-image: none;
-}
-
-.carousel-indicators {
-  /*bottom:0;*/
 }
 
 #sampleusers ol li {
