--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -18,12 +18,14 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 
 // Component styles are injected through grunt
 // injector
+@import 'about/about.scss';
 @import 'account/login/login.scss';
 @import 'account/profile/profile.scss';
 @import 'admin/admin.scss';
 @import 'article/mainArticles/mainArticles.scss';
 @import 'article/singleArticle/singleArticle.scss';
 @import 'ask/ask.scss';
+@import 'help/help.scss';
 @import 'landing/landing.scss';
 @import 'main/main.scss';
 @import 'question/question.scss';
