--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -20,6 +20,12 @@ i {
   color:#FFF577; text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
 }
 
+iframe{
+  width:85%;
+  height:280px;
+  box-shadow: 1px 1px 3px 0px rgba(0,0,0,0.75);
+}
+
 /*img {
     -webkit-box-shadow: 1px 2px 3px 1px rgba(0,0,0,0.75);
     -moz-box-shadow: 1px 2px 3px 1px rgba(0,0,0,0.75);
@@ -208,23 +214,8 @@ a:hover {
   background-image: none;
 }
 
-#sampleusers ol li {
-  width: 32px;
-  height: 32px;
-  margin: 5px;
-  cursor: pointer;
-  border: 4px solid #CCC;
-  opacity: 0.4;
-  border-radius: 100px;
-  transition: all 0.7s;
-}
-
-#sampleusers .carousel-indicators .active {
-width: 80px;
-height: 80px;
-border-radius: 100px;
-border-color: #F5DC25;
-opacity: 1;
+#toolbarCC span{
+  font-size: 14px;
 }
 
 .panel
@@ -375,6 +366,10 @@ opacity: 1;
   max-height: 400px;
   max-width:90%;
   margin: 10px auto;
+}
+
+.black {
+  color:black;
 }
 
 .blue {
