--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,5 +1,5 @@
 <headroom tolerance="5" offset="400" classes='{"initial":"animated","pinned":"slideInDown","unpinned":"slideOutUp","top":"headroom--top","notTop":"headroom--not-top"}' class="navbar-fixed-top">
-<div class="navbar navbar-default" ng-controller="NavbarCtrl">
+<div class="navbar navbar-default background-yellow" ng-controller="NavbarCtrl" style="border-radius: 0;">
   <div class="container">
     <div class="navbar-header">
       <button class="navbar-toggle" type="button" ng-click="isCollapsed = !isCollapsed">
