--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -29,7 +29,9 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'landing/landing.scss';
 @import 'main/main.scss';
 @import 'question/question.scss';
+@import 'report/report.scss';
 @import 'share/share.scss';
+@import 'suggestion/suggestion.scss';
 @import 'tag/tag/tag.scss';
 @import 'tag/tags/tags.scss';
 @import 'user/user.scss';
