--- a/client/app/question/question.scss
+++ b/client/app/question/question.scss
@@ -37,6 +37,7 @@
     box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.75);
     border: 1px solid #dddddd;
     background: aliceblue;
+    border-radius: 4px;
 }
 
 .answersInQuestion {
