--- a/client/components/sidebar/rightSidebar.html
+++ b/client/components/sidebar/rightSidebar.html
@@ -19,6 +19,23 @@
 			By Supakorn L.
 		</footer>
 	</div> -->
+
+	<a ng-href="/service" style="position:relative;">
+		<div id="service" class="haveBorder text-center pinkGradient">
+			<div class="smallPadding sidebarInnerBox blueBorder">
+			<h2>บริการเพื่อนใจ</h2>
+			<small>- ทําฟรีด้วยรัก -</small>
+
+			</div>
+			<div style="position: absolute; left: 50%; bottom:0;">
+			    <div id="mainTitle" style="position: relative; left: -50%;">
+			      <i class="fa fa-heart fa-2x red"></i>
+			    </div>
+			</div>
+			<img ng-src="/assets/images/cutecat.png" style="width:100%;"/>
+		</div>
+	</a>
+
 <a ng-href="/suggestion">
 	<div id="suggestionBox" ng-init="ideaImg='/assets/images/idea1.png'" ng-mouseover="ideaImg='/assets/images/idea.gif'" ng-mouseout="ideaImg='/assets/images/idea1.png'" style="border:1px solid #dddddd; text-align: center; background: #F1C632;">
 		<div class="smallPadding sidebarInnerBox blueBorder">
@@ -39,21 +56,19 @@
 	</div>
 </a>
 
+
+
 <a ng-href="/about">
-	<div id="aboutUs" class="haveBorder text-center pinkGradient">
-		<div class="smallPadding sidebarInnerBox blueBorder">
-		<h2>รู้จักกับเรา</h2>
-		<small>- ทําด้วยใจ -</small>
+	<div id="aboutus" class="haveBorder text-center" style="background: #ED6769;">
+		<div class="smallPadding sidebarInnerBox yellowBorder">
+				<h2>มารู้จักกับเรา</h2>
+				<small>- ปรทัต -</small>
 		</div>
-		<div style="position: absolute; left: 50%; bottom:0;">
-		    <div id="mainTitle" style="position: relative; left: -50%;">
-		      <i class="fa fa-heart fa-2x red"></i>
-		    </div>
-		</div>
-		<img ng-src="/assets/images/cutecat.png" style="width:100%;"/>
+		<img ng-src="/assets/images/hello.png" style="width:100%;"/>
 	</div>
 </a>
-	
+
+
 <!-- 	<div id="popArticles">
 		<h3 style="text-align: center;">บทความที่น่าสนใจ</h3>
 		<div id="articleList" class="row">
