suggestion and report

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -25,6 +25,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'article/mainArticles/mainArticles.scss';
 @import 'article/singleArticle/singleArticle.scss';
 @import 'ask/ask.scss';
+@import 'createstory/createstory.scss';
 @import 'help/help.scss';
 @import 'landing/landing.scss';
 @import 'main/main.scss';
