--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -105,6 +105,9 @@ a:hover {
   font-size: 1.1em;
 }
 
+.mainSwitchButtom {
+  width:100%; display:block; margin:0px auto 15px auto; font-size: 1.2em;
+}
 
 .bigPadding {
   padding:20px;
