--- a/client/components/sidebar/rightSidebar.html
+++ b/client/components/sidebar/rightSidebar.html
@@ -20,22 +20,6 @@
 		</footer>
 	</div> -->
 
-	<a ng-href="/service" style="position:relative;">
-		<div id="service" class="haveBorder text-center pinkGradient">
-			<div class="smallPadding sidebarInnerBox blueBorder">
-			<h2>บริการเพื่อนใจ</h2>
-			<small>- ทําฟรีด้วยรัก -</small>
-
-			</div>
-			<div style="position: absolute; left: 50%; bottom:0;">
-			    <div id="mainTitle" style="position: relative; left: -50%;">
-			      <i class="fa fa-heart fa-2x red"></i>
-			    </div>
-			</div>
-			<img ng-src="/assets/images/cutecat.png" style="width:100%;"/>
-		</div>
-	</a>
-
 <a ng-href="/suggestion">
 	<div id="suggestionBox" ng-init="ideaImg='/assets/images/idea1.png'" ng-mouseover="ideaImg='/assets/images/idea.gif'" ng-mouseout="ideaImg='/assets/images/idea1.png'" style="border:1px solid #dddddd; text-align: center; background: #F1C632;">
 		<div class="smallPadding sidebarInnerBox blueBorder">
@@ -56,15 +40,40 @@
 	</div>
 </a>
 
+<a ng-href="/service" style="position:relative;">
+	<div id="service" class="haveBorder text-center pinkGradient">
+		<div class="smallPadding sidebarInnerBox blueBorder">
+		<h2>บริการเพื่อนใจ</h2>
+		<small>- ทําฟรีด้วยรัก -</small>
+
+		</div>
+		<div style="position: absolute; left: 50%; bottom:0;">
+		    <div id="mainTitle" style="position: relative; left: -50%;">
+		      <i class="fa fa-heart fa-2x red"></i>
+		    </div>
+		</div>
+		<img ng-src="/assets/images/cutecat.png" style="width:100%;"/>
+	</div>
+</a>
 
 
 <a ng-href="/about">
 	<div id="aboutus" class="haveBorder text-center" style="background: #ED6769;">
 		<div class="smallPadding sidebarInnerBox yellowBorder">
-				<h2>มารู้จักกับเรา</h2>
+				<h2>รู้จักกับผู้สร้าง</h2>
 				<small>- ปรทัต -</small>
 		</div>
 		<img ng-src="/assets/images/hello.png" style="width:100%;"/>
+	</div>
+</a>
+
+<a ng-href="/contact">
+	<div id="contactus" class="haveBorder text-center" style="background: #FAF2DD;">
+		<div class="smallPadding sidebarInnerBox blueBorder">
+				<h2>ติดต่อกับเรา</h2>
+				<small>- ตลอด 24 ชี่วโมง -</small>
+		</div>
+		<img ng-src="/assets/images/contact.jpg" style="width:100%;"/>
 	</div>
 </a>
 
