--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -25,12 +25,14 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'article/mainArticles/mainArticles.scss';
 @import 'article/singleArticle/singleArticle.scss';
 @import 'ask/ask.scss';
+@import 'contact/contact.scss';
 @import 'createstory/createstory.scss';
 @import 'help/help.scss';
 @import 'landing/landing.scss';
 @import 'main/main.scss';
 @import 'question/question.scss';
 @import 'report/report.scss';
+@import 'service/service.scss';
 @import 'share/share.scss';
 @import 'suggestion/suggestion.scss';
 @import 'tag/tag/tag.scss';
