--- a/client/components/navbar/navbar.scss
+++ b/client/components/navbar/navbar.scss
@@ -8,6 +8,10 @@
 	background: linear-gradient(to bottom,  rgba(91,192,222,1) 0%,rgba(75,154,204,1) 99%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5bc0de', endColorstr='#4b9acc',GradientType=0 );
 }
+
+.navbar {
+	border:none;
+}
 /*.swingInX {
 	-moz-transform-origin: top;
 	-ie-transform-origin: top;
