--- a/client/components/sidebar/sidebar.scss
+++ b/client/components/sidebar/sidebar.scss
@@ -1,8 +1,31 @@
+.sidebarBox {
+	/*height:333px;*/
+	position: relative;
+}
+
+@media (max-width: 992px) and (min-width:750px) {
+  .sidebarBox {
+    height:407px;
+  }
+  .sidebarBox img {
+  	/*width: 100%;*/
+  	position: absolute;
+  	bottom: 0;
+  	left:0;
+  }
+}
 .sidebarInnerBox {
 	background: white;
 	width: 80%;
 	display: block;
 	margin: 0 auto;
+}
+
+.sidebarBox img {
+	width: 100%;
+/*	position: absolute;
+	bottom: 0;
+	left:0;*/
 }
 
 .blueBorder {
